--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -26,6 +26,7 @@ jobs:
         run: |
           RELEASE=`curl --silent "https://api.github.com/repos/rust-analyzer/rust-analyzer/releases/latest" | jq -r ".tag_name"`
           LAST_RELEASE=`cat ebuild-bot/rust-analyzer-bin/latest.txt`
+          echo "Release: ${RELEASE}, Last = ${LAST_RELEASE}"
           if [[ ${RELEASE} > ${LAST_RELEASE} ]] && [ ${RELEASE} != "null" ]; then 
             echo "Updating rust-analyzer-bin"
             cp ebuild-bot/rust-analyzer-bin/rust-analyzer-bin.ebuild.template tkn-overlay/dev-util/rust-analyzer-bin/rust-analyzer-bin-${RELEASE//-/.}.ebuild
