--- a/rust-analyzer-bin/rust-analyzer-bin.ebuild.template
+++ b/rust-analyzer-bin/rust-analyzer-bin.ebuild.template
@@ -1,4 +1,4 @@
-# Copyright 1999-2021 Gentoo Authors
+# Copyright 1999-2022 Gentoo Authors
 # Distributed under the terms of the GNU General Public License v2
 
 EAPI=7
@@ -9,7 +9,7 @@ MY_PV="$(ver_cut 1)-$(ver_cut 2)-$(ver_cut 3)"
 DESCRIPTION="An experimental Rust compiler front-end for IDEs"
 HOMEPAGE="https://rust-analyzer.github.io/"
 SRC_URI="
-	https://github.com/rust-analyzer/rust-analyzer/releases/download/${MY_PV}/${MY_PN}-linux
+	https://github.com/rust-analyzer/rust-analyzer/releases/download/${MY_PV}/${MY_PN}-x86_64-unknown-linux-gnu.gz -> ${P}.gz
 "
 LICENSE="Apache-2.0"
 SLOT="0"
@@ -21,16 +21,12 @@ S=${WORKDIR}
 QA_PRESTRIPPED="*"
 QA_PREBUILT="*"
 
-src_unpack() {
-	return
-}
-
 src_configure() {
 	return
 }
 
 src_compile() {
-	cp ${DISTDIR}/rust-analyzer-linux ${MY_PN}
+	cp ${DISTDIR}/${P} ${MY_PN}
 }
 
 src_install() {
